--- a/ht_3/pages/autoriz.html
+++ b/ht_3/pages/autoriz.html
@@ -11,6 +11,9 @@
 
 <body>
     <header>
+        <img src="../assets/copart.jpg" width="200" height="150" alt="лого">
+        <br>
+        <a href="./reg.html"><b>регистрация</b></a>
         <h1>вход на сайт</h1>
     </header>
     <form action="https://fom.in.ua/echo">
