--- a/ht_3/pages/reg.html
+++ b/ht_3/pages/reg.html
@@ -10,6 +10,9 @@
 
 <body>
     <header>
+        <img src="../assets/copart.jpg" width="200" height="150" alt="лого">
+        <br>
+        <a href="./autoriz.html"><b>авторизация</b></a>
         <h1>регистрация</h1>
     </header>
     <form action="https://fom.in.ua/echo">
