--- a/ht_3/index.html
+++ b/ht_3/index.html
@@ -9,6 +9,38 @@
         content="продажа и подбор авто из сша,лучшие цены.полный сервис услуг.поможем купить!привезти!оформить!самые популярные модели!">
     <meta name="keywords" content="авто из сша,услуги брокера,подбор авто из сша,выгодные цены,авто под ключ">
     <title>авто из сша</title>
+    <style>
+        h1 {
+            font-family: Times, serif;
+            color: rgb(40, 91, 245);
+            text-align: center;
+            font-size: 4em;
+        }
+
+        body {
+            font-size: 1em;
+        }
+
+        h2 {
+            font-family: Times, serif;
+            color: rgb(32, 8, 206);
+            text-align: center;
+            font-size: 2em;
+        }
+
+        section>h3 {
+            font-family: Times, serif;
+            color: rgb(236, 10, 10);
+            text-align: left;
+            font-size: 2em;
+        }
+
+        TABLE {
+            background: rgb(240, 239, 236);
+            border: 5px double #000;
+            font-size: 1.1em
+        }
+    </style>
 </head>
 
 <body>
@@ -24,10 +56,9 @@
         <img src="./assets/nissan-rogue04.jpg" width="1500" alt="заставка">
         <section class="general">
             <h2>в 2021 году спрос на б/у автомобили из сша не снизился, и даже наоборот, стал рости.</h2>
-            <h3>компания<strong>авто из сша</strong> подготовила список самых популярных марок и моделей машин,
-                которые
-                по данным статистики продаж вошли в <strong>топ автомобилей из сша в украине</strong>.
-            </h3>
+            компания <strong>авто из сша</strong> подготовила список самых популярных марок и моделей машин,
+            которые
+            по данным статистики продаж вошли в <strong>топ автомобилей из сша в украине</strong>.
             <aside>
                 <nav>
                     <a href="#otz"><b>отзывы</b></a>
@@ -167,7 +198,7 @@
             </table>
         </section>
         <section id="otz" class="reviews">
-            <h2>отзывы наших клиентов</h2>
+            <h3>отзывы наших клиентов</h3>
             <img src="./assets/otz_1.png" alt="imag1">
             <img src="./assets/otz_2.png" alt="imag2">
             <img src="./assets/otz_3.png" alt="imag3">
