--- a/ht_2/lesson_2/table.html
+++ b/ht_2/lesson_2/table.html
@@ -6,6 +6,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        tbody {
+            background: rgb(243, 243, 199);
+            color: black;
+        }
+        .footer {
+            color: rgb(248, 8, 8);
+        }
+    </style>
 </head>
 
 <body>
@@ -55,7 +64,7 @@
                 <th>-</th>
             </tr>
         </thead>
-        <tbody style="background-color:white">
+        <tbody>
             <tr align="center">
                 <td width="4%" rowspan="8" align="left"><b>Газеты</b></td>
                 <td width="4%" rowspan="4">+</td>
@@ -199,7 +208,7 @@
                 <td colspan="4">-673</td>
                 <td colspan="4">1000</td>
             </tr>
-            <tr>
+            <tr class="footer">
                 <td colspan="18">
                     (+) - Читают,слушают,смотрят,посещают
                 </td>
