add changes lesson_6

--- a/ht_6/index.html
+++ b/ht_6/index.html
@@ -31,16 +31,14 @@
             <hr>
         </aside>
     </section>
-    <section class="bloks">
-        <h3 id="impr">Импрессионисты</h3>
+    <section class="section">
+        <h4 id="impr">Импрессионисты</h4>
         <ul>
             <li>
                 <div class="picture">
                     <img src="assets/sonyah.jpg" alt="подсолнухи_ван гог">
                 </div>
-                <div class="title">
-                    <p>Подсолнухи</p>
-                </div>
+                <h3 class="title">Подсолнухи</h3>
                 <div class="description">
                     <span><strong>Подсолнухи (фр. Tournesols)</strong> — название двух циклов картин нидерландского
                         художника Винсента
@@ -56,9 +54,7 @@
                 <div class="picture">
                     <img src="./assets/dega_impr.jpg" alt="голубые танцовщицы_дега">
                 </div>
-                <div class="title">
-                    <p>Голубые танцовщицы</p>
-                </div>
+                <h3 class="title">Голубые танцовщицы</h3>
                 <div class="description">
                     <span><strong>Голубые танцовщицы (фр. Danseuses bleues)</strong> — пастель французского
                         художника-импрессиониста
@@ -73,9 +69,7 @@
                 <div class="picture">
                     <img src="./assets/impr_night.jpg" alt="Звёздная ночь_ван гог">
                 </div>
-                <div class="title">
-                    <p>Звёздная ночь</p>
-                </div>
+                <h3 class="title">Звёздная ночь</h3>
                 <div class="description">
                     <span><strong>Звёздная ночь (нидерл. De sterrennacht)</strong> — одна из наиболее известных картин
                         нидерландского
@@ -88,16 +82,14 @@
             </li>
         </ul>
     </section>
-    <section class="bloks">
+    <section class="section">
         <h4 id="landscaps">Пейзажисты</h4>
         <ul>
             <li>
                 <div class="picture">
                     <img src="./assets/pez_aivasovsky.jpg" alt="Гнев морей_айвазовский">
                 </div>
-                <div class="title">
-                    <p>Гнев морей</p>
-                </div>
+                <h3 class="title">Гнев морей</h3>
                 <div class="description">
                     <span><strong>Гнев морей</strong> — картина русского художника Ивана Константиновича Айвазовского,
                         написанная в 1886 году. Холст, масло.Изображено штормовое море вблизи скал,
@@ -111,11 +103,9 @@
                 <div class="picture">
                     <img src="./assets/monet,_impression,_soleil_levant.jpg" alt="Восходящее солнце_моне">
                 </div>
-                <div class="title">
-                    <p>Впечатление.Восходящее солнце</p>
-                </div>
+                <h3 class="title">Впечатление. Восходящее солнце</h3>
                 <div class="description">
-                    <span><strong>«Впечатление. Восходящее солнце» (фр. Impression, soleil levant)</strong> — картина
+                    <span><strong>Впечатление. Восходящее солнце (фр. Impression, soleil levant)</strong> — картина
                         Клода Моне,
                         написанная в 1872 году с натуры в старом аванпорте Гавра
                         и давшая название художественному направлению «импрессионизм»
@@ -129,9 +119,7 @@
                 <div class="picture">
                     <img src="./assets/turner_last_.jpg" alt="Последний рейс корабля Отважный_тернер">
                 </div>
-                <div class="title">
-                    <p>Последний рейс корабля Отважный</p>
-                </div>
+                <h3 class="title">Последний рейс корабля Отважный</h3>
                 <div class="description">
                     <span><strong>Последний рейс корабля Отважный</strong> — картина английского живописца Уильяма
                         Тёрнера,
@@ -144,16 +132,14 @@
             </li>
         </ul>
     </section>
-    <section class="bloks">
+    <section class="section">
         <h5 id="exsp">Экспрессионисты</h5>
         <ul>
             <li>
                 <div class="picture">
                     <img src="./assets/scream.jpg" alt="крик_мунк">
                 </div>
-                <div class="title">
-                    <p>Крик</p>
-                </div>
+                <h3 class="title">Крик</h3>
                 <div class="description">
                     <span><strong>Крик (норв. Skrik)</strong> — созданная в промежутке между 1893 и 1910 годами серия
                         картин
@@ -168,9 +154,7 @@
                 <div class="picture">
                     <img src="./assets/de_cartes.jpg" alt="Игроки в карты_сезан">
                 </div>
-                <div class="title">
-                    <p>Игроки в карты</p>
-                </div>
+                <h3 class="title">Игроки в карты</h3>
                 <div class="description">
                     <span><strong>Игроки в карты</strong> — серия из пяти картин французского художника Поля Сезанна,
                         написанных им в период 1890—1895 годов.
@@ -184,9 +168,7 @@
                 <div class="picture">
                     <img src="./assets/van_gogh_.jpg" alt="Прогулка заключённых_ван гог">
                 </div>
-                <div class="title">
-                    <p>Прогулка заключённых</p>
-                </div>
+                <h3 class="title">Прогулка заключённых</h3>
                 <div class="description">
                     <span><strong>Прогулка заключённых</strong> — картина Винсента ван Гога, написанная в феврале 1890
                         года.
@@ -213,6 +195,4 @@
             сopyright lozovoy oleksii
         </span>
     </footer>
-
-
 </html>
