add changes at index & styles lesson_6

--- a/ht_6/index.html
+++ b/ht_6/index.html
@@ -32,13 +32,13 @@
         </aside>
     </section>
     <section class="section">
-        <h4 id="impr">Импрессионисты</h4>
+        <h3 id="impr">Импрессионисты</h3>
         <ul>
             <li>
                 <div class="picture">
                     <img src="assets/sonyah.jpg" alt="подсолнухи_ван гог">
                 </div>
-                <h3 class="title">Подсолнухи</h3>
+                <h4 class="title">Подсолнухи</h4>
                 <div class="description">
                     <span><strong>Подсолнухи (фр. Tournesols)</strong> — название двух циклов картин нидерландского
                         художника Винсента
@@ -54,7 +54,7 @@
                 <div class="picture">
                     <img src="./assets/dega_impr.jpg" alt="голубые танцовщицы_дега">
                 </div>
-                <h3 class="title">Голубые танцовщицы</h3>
+                <h4 class="title">Голубые танцовщицы</h4>
                 <div class="description">
                     <span><strong>Голубые танцовщицы (фр. Danseuses bleues)</strong> — пастель французского
                         художника-импрессиониста
@@ -69,7 +69,7 @@
                 <div class="picture">
                     <img src="./assets/impr_night.jpg" alt="Звёздная ночь_ван гог">
                 </div>
-                <h3 class="title">Звёздная ночь</h3>
+                <h4 class="title">Звёздная ночь</h4>
                 <div class="description">
                     <span><strong>Звёздная ночь (нидерл. De sterrennacht)</strong> — одна из наиболее известных картин
                         нидерландского
@@ -83,13 +83,13 @@
         </ul>
     </section>
     <section class="section">
-        <h4 id="landscaps">Пейзажисты</h4>
+        <h5 id="landscaps">Пейзажисты</h5>
         <ul>
             <li>
                 <div class="picture">
                     <img src="./assets/pez_aivasovsky.jpg" alt="Гнев морей_айвазовский">
                 </div>
-                <h3 class="title">Гнев морей</h3>
+                <h6 class="title">Гнев морей</h6>
                 <div class="description">
                     <span><strong>Гнев морей</strong> — картина русского художника Ивана Константиновича Айвазовского,
                         написанная в 1886 году. Холст, масло.Изображено штормовое море вблизи скал,
@@ -103,7 +103,7 @@
                 <div class="picture">
                     <img src="./assets/monet,_impression,_soleil_levant.jpg" alt="Восходящее солнце_моне">
                 </div>
-                <h3 class="title">Впечатление. Восходящее солнце</h3>
+                <h6 class="title">Впечатление. Восходящее солнце</h6>
                 <div class="description">
                     <span><strong>Впечатление. Восходящее солнце (фр. Impression, soleil levant)</strong> — картина
                         Клода Моне,
@@ -119,7 +119,7 @@
                 <div class="picture">
                     <img src="./assets/turner_last_.jpg" alt="Последний рейс корабля Отважный_тернер">
                 </div>
-                <h3 class="title">Последний рейс корабля Отважный</h3>
+                <h6 class="title">Последний рейс корабля Отважный</h6>
                 <div class="description">
                     <span><strong>Последний рейс корабля Отважный</strong> — картина английского живописца Уильяма
                         Тёрнера,
@@ -139,7 +139,7 @@
                 <div class="picture">
                     <img src="./assets/scream.jpg" alt="крик_мунк">
                 </div>
-                <h3 class="title">Крик</h3>
+                <h6 class="title">Крик</h6>
                 <div class="description">
                     <span><strong>Крик (норв. Skrik)</strong> — созданная в промежутке между 1893 и 1910 годами серия
                         картин
@@ -154,7 +154,7 @@
                 <div class="picture">
                     <img src="./assets/de_cartes.jpg" alt="Игроки в карты_сезан">
                 </div>
-                <h3 class="title">Игроки в карты</h3>
+                <h6 class="title">Игроки в карты</h6>
                 <div class="description">
                     <span><strong>Игроки в карты</strong> — серия из пяти картин французского художника Поля Сезанна,
                         написанных им в период 1890—1895 годов.
@@ -168,14 +168,17 @@
                 <div class="picture">
                     <img src="./assets/van_gogh_.jpg" alt="Прогулка заключённых_ван гог">
                 </div>
-                <h3 class="title">Прогулка заключённых</h3>
+                <h6 class="title">Прогулка заключённых</h6>
                 <div class="description">
-                    <span><strong>Прогулка заключённых</strong> — картина Винсента ван Гога, написанная в феврале 1890
+                    <span><strong>Прогулка заключённых</strong> — картина Винсента ван Гога, написанная в феврале
+                        1890
                         года.
                         Копия с гравюры «Острог» Гюстава Доре (1872).
-                        На картине изображён колодец маленького и тесного тюремного двора, на котором по кругу обречённо
+                        На картине изображён колодец маленького и тесного тюремного двора, на котором по кругу
+                        обречённо
                         движутся
-                        заключённые. Картина выполнена в сине-зелёной гамме.Прогулка заключённых символизирует жизнь,
+                        заключённые.Картина выполненна в зеленых тонах.Прогулка заключённых символизирует
+                        жизнь,
                         подобную, по мнению художника, замкнутому кругу.
                     </span>
                 </div>
@@ -195,4 +198,5 @@
             сopyright lozovoy oleksii
         </span>
     </footer>
+
 </html>
