--- a/ht_7/index.html
+++ b/ht_7/index.html
@@ -129,10 +129,10 @@
                     consectetur dolores alias?
                 </p>
                 <div class="video">
-                    <img src="./assets/video.png" alt="video-bg" class="video-bg">
-                    <button class="play-btn">
-                        <img src="./assets/play_ico.png" alt="play">
-                    </button>
+                    <video controls="controls" poster="./assets/video.png">
+                        <source src="./assets/work.mp4" type='video/mp4; codecs="avc1.42E01E, mp4a.40.2"'>
+                        Тег video не поддерживается вашим браузером.
+                    </video>
                 </div>
             </div>
         </section>
